// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative course/course.proto
syntax = "proto3";

option go_package = "course/main";

package course;

service CourseProto {
	rpc PostCourse (Course) returns (RequestCompleted) {}
	rpc GetCourse (GetCourseRequest) returns (Course) {}
}

message Course {
	int32 CourseId = 1;
	string Name = 2;
	int32 Workload = 3;
	int32 SatisfactoryScore = 4;
	repeated string Teachers = 5;
	repeated string Students = 6;
}

message GetCourseRequest {}

message RequestCompleted {
	string message = 1;
}